--- a/static/css/global.css
+++ b/static/css/global.css
@@ -3,50 +3,238 @@
 		display: none;
 	}
 }
-ul {
-	padding: 0;
-	margin: 0;
-}
-body {
-	font-family: charter,Georgia,Cambria,"Times New Roman",Times,serif;
-	font-size: 14pt;
-	line-height: 1.3;
-	background-color: #F7F6F2;
-	margin: 0;
-}
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;700;900&display=swap');
+/* debugging support */
+/*
 * {
-	box-sizing: border-box;
+	outline-color: cyan !important;
+	outline-style: solid; 
+	outline-width: 1px; 
 }
+*/
+/* global variables and settings */
+:root {
+  --brand-color: #ee3f75;
+  --background-color: #F7F6F2;
+  --font-family: 'Martel Sans', sans-serif;
+  --regular-weight: 400;
+  --bold-weight: 700;
+  --display-weight: 900;
+  --page-width: 70rem;
+}
+
+/* set page width */
+div#banner,
+nav#main-nav,
+footer#page-footer div#rbgv-footer
+{
+	max-width: var(--page-width);
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* links */
 a {
-	color: #78130B;
+	color: var(--brand-color);
 	text-decoration: none;
 }
 a:hover {
-	text-decoration: underline !important;
+	text-decoration: underline;
 }
 
-/* override design of proxied pages */
-div.row div.twelvecol {
-	float: none !important;
-}
-header.page-header {
-	background-color:black;
-	color:white;
-}
-
-header.page-header a {
-	color:white;
+header#header {
+	border-bottom-color: var(--brand-color);
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding-bottom: 0.5rem;
+	padding-top: 0.5rem;
 }
 
-section.project-site {
-	margin: 1em 0 0 2em;
+/* menus */
+form#quick-search {
+	flex: auto;
+	/*
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;*/
+	margin: 0; 
+	padding-right: 0.25rem;
+}
+
+form#quick-search div {
+	height: 2rem;
+	display: flex;
+	justify-content: right;
+}
+form#quick-search input {
+	appearance: none;
+	height: 100%;
+	border-width: 1px;
+	border-style:solid;
+	border-color: var(--brand-color);
+	padding: 0.5rem;
+	border-top-left-radius: 0.3rem;
+	border-bottom-left-radius: 0.3rem;
+	box-shadow: none;
+}
+form#quick-search a {
+	margin-top: 0.25rem;
+	margin-left: 0.5rem;
+	margin-bottom: 0.25rem;
+	float: right;
+	font-size: 0.67em;
+}
+
+form#quick-search button {
+	flex-basis: auto;
+	appearance: none;
+	height: 100%;
+	background-color: var(--brand-color);
+	color: white;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	/*
+	padding-bottom: 5px;
+	padding-top: 5px;
+	*/
+	border: 0;
+	box-shadow: none;
+	border-top-right-radius: 0.3rem;
+	border-bottom-right-radius: 0.3rem;
+	text-align: center;
+	vertical-align: text-bottom;
+}
+
+nav#main-nav {
+	color: var(--brand-color);
+	background-color: var(--background-color);
+	position: relative;
+	top: 0;
+	display: flex;
+	justify-content: space-between;
+}
+nav#main-nav ul {
+	margin-top: 0;
+	flex-basis: auto;
+	padding: 0;
+	/*
+	padding-top: 0.2em;
+	padding-bottom: 0.2em;
+	*/
+}
+nav#main-nav li {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0;
+}
+nav#main-nav details li {
+	display: inherit;
+}
+nav#main-nav a:hover,
+nav#main-nav summary:hover,
+nav#main-nav details ul
+{
+	outline-color: var(--brand-color);
+	outline-width: 1px;
+	outline-style: solid;
+}
+nav#main-nav ul.primary a {
+	display: inline-block;
+}
+nav#main-nav ul.primary a,
+nav#main-nav ul.primary summary {
+	height: 2rem;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	padding-top: 0.25rem;
+	vertical-align: baseline;
+	cursor: pointer;
+	text-decoration: none;
+}
+nav#main-nav ul.primary summary {
+	list-style-type: none;
+}
+nav#main-nav ul.secondary li a {
+	width: 100%;
+}
+nav#main-nav ul.secondary a {
+	border: none;
+}
+nav#main-nav details {
+	position: relative;
+	z-index: 10;
+}
+nav#main-nav details[open] ul {
+	position: absolute;
+	background-color: var(--background-color);
+	z-index: 10;
+	/*top: 2em;*/
+	left: 0;
+	width: max-content;
+	padding: 0;
+}
+/* end of menus */
+
+body {
+	font-weight: var(--regular-weight);
+	font-family: var(--font-family);
+  	display: flex;
+	flex-direction: column;
+	min-height: 100vh; /* body is at least the full height of the viewport */
+	
+	font-size: 14pt;
+	line-height: 1.3;
+	background-color: var(--background-color);
+	margin: 0;
+}
+
+div#banner {
+	padding-top: 1rem;
+	display: flex;
+}
+div#banner h1 {
+	font-family: var(--font-family);
+	font-weight: var(--display-weight);
+	font-size: 2rem;
+	padding-left: 2rem;
+}
+
+footer#page-footer {
+	border-top-color: var(--brand-color);
+	border-top-style: solid;
+	border-top-width: 1px;
+	padding-top: 0.5rem;
+}
+footer#page-footer div {
+	display: flex;
+	justify-content: space-between;
+}
+
+div.rbgv-website img {
+	height: 5rem;
+}
+div.social-media {
+}
+div.social-media a {
+	padding-left: 0.1rem;
+	padding-right: 0.1rem;
+}
+
+/* up to here */
+ul {
+	margin: 0;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 
 /* These are the components which are horizontally centered in the page */
 header.page-header section div.masthead,
 nav#main-nav ul.primary,
-section.content,
+main.content,
 footer.page-footer div.link-to-top,
 footer.page-footer div.menus,
 footer.page-footer div.links,
@@ -57,8 +245,8 @@ div.row div.twelvecol
 	margin-right: auto;
 	max-width: 70rem;
 }
-section.content {
-	background-color: white;
+main.content {
+	background-color: var(--background-color);
 	padding: 0.5em;
 	display: flex;
 	align-items: flex-start;
@@ -71,157 +259,16 @@ header.page-header section.iub {
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 }
-/* The IUB banner has right-aligned content */
-header.page-header section.iub a {
-	display: flex;
-	justify-content: flex-end;
-}
-img#iu-logo {
-	display: block;
-	margin-right: 5em;
-}
-header.page-header section.chymistry {	
-	background-color: #DFD9BD;
-	padding-top: 0.1em;
-	padding-bottom: 0.1em;
-	padding-left: 0;
-	padding-right: 0;
-	display: flex;
-}
-/* The Chymistry banner */
-header.page-header section.chymistry div.masthead {
-	display: flex;
-	align-items: flex-end;
-}
-a.masthead-link {
-	align-self: start;
-	justify-self: start;
-}
 
-
-form#quick-search {
-	flex: auto;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	float:right;
-	margin: 0 2em 0 0; 
-}
-
-form#quick-search a {
-	margin-left: 0.4em;
-	color: white;
-}
-
-form#quick-search button {
-	margin: 0 0 0 .5em;
-}
-details.keyboard summary {
-	margin-right: 0.4em;
-}
-details.keyboard {
-	position: relative;
-}
-details.keyboard h1 {
-	font-size: small;
-	font-weight: bold;
-	margin-top: 1em;
-	margin-bottom: 0.5em;
-}
-details.keyboard div {
-	position: absolute;
-	top: 1.5em;
-	z-index: 20;
-	background-color: #F7F8F2;
-	border: thin solid #DFD9BD;
-	padding: 0.4em;
-	height: 25em;
-	overflow-y: scroll;
-}
-details.keyboard div section ul {
-	list-style-type: none;
-	display: grid;
-	grid-template-columns: repeat(8, 1fr);
-	justify-items: center;
-}
-input {	
-	font-family: "Newton Sans";
-}
-
-button.key {
-	padding: 0;
-	margin: 0.1em;
-	font-family: "Newton Sans";
-}
-
-@font-face {
-  font-family: "Newton Sans";
-  src: url("/font/NewtonSans-2015-11-04.ttf");
-}
-
-nav#main-nav {
-	background-color: rgb(66, 60, 48);
-	font-size: small;
-	position: relative;
-	top: 0;
-}
-nav#main-nav ul {
-	margin-top: 0;
-	padding-top: 0.2em;
-	padding-bottom: 0.2em;
-}
-nav#main-nav li {
-	display: inline-block;
-	vertical-align: top;
-	margin: 0;
-}
-nav#main-nav details li {
-	display: inherit;
-}
-nav#main-nav a:hover,
-nav#main-nav summary:hover {
-	background-color: rgb(45, 41, 33);
-}
-nav#main-nav ul.primary a {
-	display: inline-block;
-}
-nav#main-nav ul.primary a,
-nav#main-nav ul.primary summary {
-	height: 2em;
-	color: rgb(247, 246, 240);
-	padding: 0.5em;
-	vertical-align: baseline;
-	cursor: pointer;
-	text-decoration: none;
-	border-right-color: rgb(247, 246, 240);
-	border-right-style: solid;
-	border-right-width: 1px;
-}
-nav#main-nav ul.secondary a {
-	border: none;
-}
-nav#main-nav details {
-	position: relative;
-	z-index: 10;
-}
-nav#main-nav details[open] ul {
-	position: absolute;
-	z-index: 10;
-	top: 2em;
-	left: 0;
-	background-color: rgb(45, 41, 33);
-	padding-left: 0;
-	width: max-content;
-}
 /* sub-menu on a page (copy of the drop down menu),
 or sidebar on some other pages */
 nav.internal,
 aside {
-	background-color: #F7F8F2;
+	background-color: var(--background-color);
 	margin-right: 2rem;
 	margin-top: 1rem;
 	min-width: 10rem;
-	border: thin solid #DFD9BD;
+	border: thin solid var(--brand-color);
 	border-top-right-radius: 0.4em;
 	border-top-left-radius: 0.4em;
 }
@@ -229,10 +276,10 @@ nav.internal header,
 aside header {
 	border-top-right-radius: 0.4em;
 	border-top-left-radius: 0.4em;
-	border: thin solid #DFD9BD;
-	background-color: #DFD9BD;
-	color: #423C30;
-	font-weight: bold;
+	border: thin solid var(--brand-color);
+	background-color: var(--brand-color);
+	color: white;
+	font-weight: var(--bold-weight);
 	padding: 0.5em;
 }
 nav.internal div header {
@@ -242,6 +289,9 @@ nav.internal div header {
 	margin-left: 0.5em;
 	color: inherit;
 	background-color: inherit;
+}
+nav.internal ul {
+	padding: 0;
 }
 
 aside p {
@@ -261,7 +311,7 @@ nav.internal a {
 	text-decoration: none;
 }
 nav.internal a.current {
-	font-weight: bold;
+	font-weight: var(--bold-weight);
 	color: black;
 }
 
@@ -289,7 +339,7 @@ div.tei-view-selection a:hover {
 	background-color: #C9C9C9;
 }
 div.tei-view-selection span {
-	font-weight: bold;
+	font-weight: var(--bold-weight);
 }
 footer.page-footer {
 	background-color: rgb(188, 171, 129);
@@ -373,5 +423,5 @@ nav.toc li {
 	list-style-type: none;
 }
 nav.toc .current { /* item in the ToC which represent the currently displayed text or one of its ancestors */
-	font-weight: bold;
+	font-weight: var(--bold-weight);
 }
