--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,18 +1,52 @@
+/* global variables and settings */
+:root {
+  --brand-color: #ee3f75;
+  --border-color: rgb(222, 226, 230);
+}
+
 div.fields {
-	grid-column: 2 / 3;
+	grid-column: 1 / 2;
+/*	grid-row-start: 1;
+	grid-row-end: span 2;
 	display: grid;
 	grid-template-columns: min-content auto;
 	grid-gap: 0.5em;
 	align-items: center;
+	*/
 }
-div.fields h1 {
-	grid-column: 1 / 3;
-}
-div.fields label {
+.facets {
 	grid-column: 1 / 2;
 }
+.results {
+	grid-column: 2 / 3;	grid-row-start: 1;
+	grid-row-end: span 2;
+}
+
+
+
+div.fields h1 {
+/*	grid-column: 1 / 3;*/
+}
+div.fields label {
+	display: block;
+	font-size: 0.8em;
+	margin-top: 0.25em;
+/*	grid-column: 1 / 2;*/
+}
 div.fields input {
-	grid-column: 2 / 3;
+/*	grid-column: 1 / 2;*/
+	appearance: none;
+	height: 100%;
+	border-width: 1px;
+	border-style:solid;
+	border-color: var(--brand-color);
+	padding: 0.5rem;
+	border-radius: 0.3rem;
+	/*
+	border-top-left-radius: 0.3rem;
+	border-bottom-left-radius: 0.3rem;
+	*/
+	box-shadow: none;
 }
 form#advanced-search {
 	display: grid;
@@ -21,16 +55,32 @@ form#advanced-search {
 	grid-template-rows: auto 1fr;
 	align-items: start;
 }
-.facets {
-	grid-column: 1 / 2;
-	grid-row-start: 1;
-	grid-row-end: span 2;
+
+button.search {
+	margin-top: 1em;
+	appearance: none;
+	height: 100%;
+	background-color: var(--brand-color);
+	color: white;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	/*
+	padding-bottom: 5px;
+	padding-top: 5px;
+	*/
+	border: 0;
+	box-shadow: none;
+	border-radius: 0.3rem;
+	text-align: center;
+	vertical-align: text-bottom;
 }
-.results {
-	grid-column: 2 / 3;
-}
-.bucket button /* reset so it doesn't look like a button */
+
+button.bucket  /* reset so it doesn't look like a button */
 {
+	margin: 0.125em;
+	display: block;
 	border-width: 0;
 	background: none repeat scroll 0 0 transparent; 
 	text-align: left;
@@ -38,13 +88,26 @@ form#advanced-search {
 	padding: 0;
 	cursor: pointer;
 	font-size: small;
-	font-family: "Newton Sans";
+	color: var(--brand-color);
 }
-.selected {
-	font-style: italic;
+button.bucket.selected::before {
+	content: "❎\FE0E";
+/*
+	background-color: var(--brand-color);
+	color: white;
+	*/
 }
-.selected::after {
-	content: " ✖";
+button.bucket.unselected::before {
+	content: "☐";
+}
+button.bucket::before {
+	margin-right: 0.25em;
+}
+span.bucket-cardinality::before {
+	content: '(';
+}
+span.bucket-cardinality::after {
+	content: ')';
 }
 
 /* hits */
@@ -57,23 +120,20 @@ mark {
 ul.results {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;
+	padding-top: 1em;
+	padding-bottom: 1em;
+	padding-left: 0;
+	padding-right: 0;
+	font-size: 0.8em;
 }
 li.result {
-	background-color: #EFEDE3;
-	padding-bottom: 1em;
-	margin-bottom: 1em;
-	border-style: solid;
-	border-color: #ccc;
-	border-width: thin;
-	border-radius: 0.3em;
+	padding-top: 0.25em;
+	padding-bottom: 0.5em;
+	border-bottom-style: solid;
+	border-bottom-width: thin;
+	border-bottom-color: rgb(204, 204, 204);
 }
 li.result cite {
-	display: block;
-	padding: 0.5em;
-	font-size: 1.5em;
-	font-style: normal;
-	background-color: #DFD9BD;
 }
 ul.matching-views {
 	list-style-type: none;
@@ -102,46 +162,51 @@ div.matching-view header {
 	border-top-right-radius: 0.3em;
 }
 ul.matching-snippets {
+	font-size: 0.8em;
 	list-style-type: none;
-	padding: 0.5em;
+/*	padding-left: 1em;*/
+	padding-top: 0.1em;
 }
 li.matching-snippet {
-	padding-bottom: 0.25em;
-	padding-top: 0.25em;
-	border-bottom-style: solid;
-	border-bottom-width: thin;
-	border-bottom-color: rgb(204, 204, 204);
+	padding-bottom: 0.1em;
+	padding-top: 0.1em;
 }
 li.matching-snippet:last-child {
-	border-bottom-style: none;
 }
 li.matching-snippet a {
 	text-decoration: none;
 	color: inherit;
 }
 nav.pagination {
+	display: flex;
+	justify-content: flex-start;
+	align-content: center;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
+}
+nav.pagination header {
+	
 }
 ul.pagination {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	column-gap: 0.5em;
-}
-ul.pagination:before{
-	content: "Page:";
+	margin-left: 2em;
 }
 ul.pagination li {
 	list-style-type: none;
 }
-li.page-item.active {
-	font-weight: bold;
+li.page-item a {
 	border-width: thin;
-	border-radius: 0.5em;
-	padding-left: 0.25em;
-	padding-right: 0.25em;
-	border-color: #78130B;
+	padding: 0.3em;
+	padding-left: 0.4em;
+	padding-right: 0.4em;
+	border-color: var(--border-color);
 	border-style: solid;
+}
+li.page-item.active a {
+	background-color: var(--brand-color);
+	border-color: var(--brand-color);
+	color: white;
 }
