--- a/static/css/tei.css
+++ b/static/css/tei.css
@@ -1,12 +1,25 @@
+
+/* global variables and settings */
+:root {
+  --brand-color: #ee3f75
+}
+
 div.tei {
 	line-height: 1.5em;
 }
 
 
 /* Styles for renditions of TEI elements */
+
+/* Translated texts are modelled as TEI group elements containing a TEI text in English and a text in the other language */
+/* They should appear side by side where possible */
+div.tei-group {
+	display: flex;
+	column-gap: 2rem;
+}
 div.tei-text {
-	max-width: 500px;
-	margin-right: 3em;
+/*	margin-right: 3em;*/
+flex: 1 1 0;
 }
 
 
@@ -99,15 +112,7 @@ ul.tei-list {
 	padding-left: 0;
 	margin: 0;
 }
-/* "disjunctive" lists are where Newton gives a columnar list of alternative words or phrases */
-ul.tei-list.type-disjunctive {
-	display: inline-block;
-	vertical-align: middle;
-	list-style-type: none;
-	font-size: small;
-	text-align: center;
-	line-height: 1em;
-}
+
 .place-infralinear {
 	vertical-align: sub;
 	font-size: 0.85em;
@@ -123,16 +128,6 @@ ul.tei-list.type-disjunctive {
 .place-inline {
 	font-size: small;
 }
-/* Manuscript metadata */
-/*
-div.tei-teiHeader {
-	border-style: solid;
-	border-width: 1pt;
-	border-color: black;
-	padding: 1em;
-	margin-top: 1em;
-}
-*/
 .tei-teiHeader h2,
 .tei-teiHeader .tei-head {
 	font-size: 1em;
@@ -150,17 +145,57 @@ div.tei-teiHeader {
 }
 
 /* TEI footnotes are rendered as details/summary elements */
-details.tei-note.type-footnote {
+/* as are TEI names of plants */
+details div ul {
+	/* override our general suppression of list padding */
+	padding-left: 1em;
+}
+
+details.tei-note.type-footnote,
+details.tei-name
+{
+	color: var(--brand-color);
 	display: inline-block;
 	text-indent: 0;
 }
+
+details.tei-note.type-footnote summary,
+details.tei-name summary
+{
+	cursor: help;
+}
+
+/* style summary elements like a hyperlink instead of a twister */
+details.tei-note.type-footnote summary,
+details.tei-name summary
+{
+	list-style: none;
+	display: inline;
+}
+
 /* make footnote superscripted */
 details.tei-note.type-footnote summary {
-	list-style: none;
-	font-size: 0.83em;
-	display: inline;
+	font-size: 0.67em;
 	vertical-align: super;
 }
+
+/* pop up footnote and botanical names */
+details.tei-note.type-footnote div,
+details.tei-name div 
+{
+	text-align: left;
+	position: absolute;
+	color: black;
+	font-size: small;
+	font-weight: normal;
+	background-color: white;
+	padding: 1em;
+	border-style: solid;
+	border-width: thin;
+	border-color: black;
+	border-radius: 0.5em;
+}
+
 
 .inline {
 	display: inline;
@@ -502,165 +537,6 @@ TBowman
 	white-space: break-spaces;
 }
 
-/* Black text on a black background?! */
-.rend-cancelled {
-	color: black;
-	background-color: black;
-}
-
-.rend-border {
-	border-style: solid;
-	border-color: #000000;
-	border-width: 2px 2px 2px 2px;
-	padding: 3px;
-}
-
-.rend-overline {
-	border-style: solid;
-	border-color: #000000;
-	border-width: 2px 0px 0px 0px;
-	padding: 3px;
-}
-
-.rend-overdash {
-	border-style: dashed;
-	border-color: #696969;
-	border-width: 2px 0px 0px 0px;
-	padding: 0px;
-	text-decoration: inherit;
-}
-
-.rend-underdash {
-	border-style: dashed;
-	border-color: #696969;
-	border-width: 0px 0px 2px 0px;
-	padding: 0px;
-}
-
-.rend-hr-10 {
-	width: 10%;
-}
-
-.rend-hr-20 {
-	width: 20%;
-}
-
-.rend-hr-25 {
-	width: 25%;
-}
-
-.rend-hr-30 {
-	width: 30%;
-}
-
-.rend-hr-40 {
-	width: 40%;
-}
-
-.rend-hr-50 {
-	width: 50%;
-}
-
-.rend-hr-60 {
-	width: 60%;
-}
-
-.rend-hr-65 {
-	width: 65%;
-}
-
-.rend-hr-70 {
-	width: 70%;
-}
-
-.rend-hr-80 {
-	width: 80%;
-}
-
-.rend-hr-90 {
-	width: 90%;
-}
-
-.rend-hr-100 {
-	width: 100%;
-}
-
-.rend-hr-100em {
-	width: 100em;
-}
-
-.rend-hr-95em {
-	width: 95em;
-}
-
-.rend-hr-90em {
-	width: 90em;
-}
-
-.rend-hr-85em {
-	width: 85em;
-}
-
-.rend-hr-80em {
-	width: 80em;
-}
-
-.rend-hr-75em {
-	width: 75em;
-}
-
-.rend-hr-70em {
-	width: 70em;
-}
-
-.rend-hr-65em {
-	width: 65em;
-}
-
-.rend-hr-60em {
-	width: 60em;
-}
-
-.rend-hr-55em {
-	width: 55em;
-}
-
-.rend-hr-50em {
-	width: 50em;
-}
-
-.rend-hr-45em {
-	width: 45em;
-}
-
-.rend-hr-40em {
-	width: 40em;
-}
-
-.rend-hr-35em {
-	width: 35em;
-}
-
-.rend-hr-30em {
-	width: 30em;
-}
-
-.rend-hr-25em {
-	width: 25em;
-}
-
-.rend-hr-20em {
-	width: 20em;
-}
-
-.rend-hr-15em {
-	width: 15em;
-}
-
-.rend-hr-10em {
-	width: 10em;
-}
-
 hr {
 	display: block;
 	clear: both;
@@ -708,363 +584,7 @@ hr {
 	margin: 4em;
 }
 
-/* ***** Widths ***** */
-.rend-w-10 {
-	width: 10%;
-}
 
-.rend-w-20 {
-	width: 20%;
-}
-
-.rend-w-30 {
-	width: 30%;
-}
-
-.rend-w-40 {
-	width: 40%;
-}
-
-.rend-w-50 {
-	width: 50%;
-}
-
-.rend-w-60 {
-	width: 60%;
-}
-
-.rend-w-70 {
-	width: 70%;
-}
-
-.rend-w-80 {
-	width: 80%;
-}
-
-.rend-w-90 {
-	width: 90%;
-}
-
-.rend-w-100 {
-	width: 100%;
-}
-
-.rend-w-5em {
-	width: 5em;
-}
-
-.rend-w-10em {
-	width: 10em;
-}
-
-.rend-w-15em {
-	width: 15em;
-}
-
-.rend-w-20em {
-	width: 20em;
-}
-
-.rend-w-25em {
-	width: 25em;
-}
-
-.rend-w-30em {
-	width: 30em;
-}
-
-.rend-w-35em {
-	width: 35em;
-}
-
-.rend-w-40em {
-	width: 40em;
-}
-
-.rend-w-45em {
-	width: 45em;
-}
-
-.rend-w-50em {
-	width: 50em;
-}
-
-.rend-w-55em {
-	width: 55em;
-}
-
-.rend-w-60em {
-	width: 60em;
-}
-
-.rend-w-65em {
-	width: 65em;
-}
-
-.rend-w-70em {
-	width: 70em;
-}
-
-.rend-w-75em {
-	width: 75em;
-}
-
-.rend-w-80em {
-	width: 80em;
-}
-
-.rend-w-85em {
-	width: 85em;
-}
-
-.rend-w-90em {
-	width: 90em;
-}
-
-.rend-w-95em {
-	width: 95em;
-}
-
-.rend-w-100em {
-	width: 100em;
-}
-
-.rend-w-110em {
-	width: 110em;
-}
-
-.rend-w-120em {
-	width: 120em;
-}
-
-.rend-w-130em {
-	width: 130em;
-}
-
-.rend-w-140em {
-	width: 140em;
-}
-
-.rend-w-150em {
-	width: 150em;
-}
-
-.rend-w-200em {
-	width: 200em;
-}
-
-.rend-w-35em-fw {
-	position: relative;
-	float: left;
-	left: 35em;
-	clear: all;
-	border: 0;
-	padding: 0;
-	margin: 0;
-	margin-left: -1em;
-}
-
-/* ***** Indentations ***** */
-.rend-ti--1 {
-	text-indent: -1em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-0 {
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-1 {
-	text-indent: 1em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-2 {
-	text-indent: 2em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-3 {
-	text-indent: 3em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-4 {
-	text-indent: 4em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-5 {
-	text-indent: 5em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-6 {
-	text-indent: 5em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-7 {
-	text-indent: 7em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-8 {
-	text-indent: 8em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-9 {
-	text-indent: 9em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-ti-10 {
-	text-indent: 10em;
-	margin: 0;
-	padding: 0;
-}
-
-.rend-hangPadTop {
-	margin-left: 2em;
-	text-indent: -2em;
-	padding-top: 1em;
-}
-
-.rend-hang {
-	margin-left: 2em;
-	text-indent: -2em;
-	padding: 0;
-}
-
-/* ***** Padded blocks ***** */
-.rend-padl-1 {
-	padding: 0 0 0 1em;
-}
-
-.rend-padl-2 {
-	padding: 0 0 0 2em;
-}
-
-.rend-padl-3 {
-	padding: 0 0 0 3em;
-}
-
-.rend-padl-4 {
-	padding: 0 0 0 4em;
-}
-
-.rend-padl-5 {
-	padding: 0 0 0 5em;
-}
-
-.rend-padl-6 {
-	padding: 0 0 0 6em;
-}
-
-.rend-padl-7 {
-	padding: 0 0 0 7em;
-}
-
-.rend-padl-8 {
-	padding: 0 0 0 8em;
-}
-
-.rend-padl-9 {
-	padding: 0 0 0 9em;
-}
-
-.rend-padl-10 {
-	padding: 0 0 0 10em;
-}
-
-/* ***** Headers ***** */
-
-/* Maps to newton.css h3 */
-/*
-h1 {
-	padding: 2px;
-	margin-left: 15px;
-	margin-top: 15px;
-	margin-bottom: -5px;
-	text-align: justify;
-	font-family: arial;
-	font-size: 14pt;
-	color: #000000;
-	page-break-after: avoid;
-}
-
-h1.small {
-	font-size: 10pt;
-	color: #4b6fda;
-	margin-bottom: 0;
-	page-break-after: avoid;
-}
-*/
-/* Maps to newton.css h4: Page sub-titles/section*/
-
-/* what are we messing with font-size here???    */
-/* we should NEVER make changes like this on HTML elements */
-/* This NEEDS to change at some point */
-/*
-h2 {
-	padding: 2px;
-	margin-top: 15px;
-	margin-bottom: -5px;
-	text-align: justify;
-	font-family: arial;
-	color: #000000;
-	font-weight: bold;
-	page-break-after: avoid;
-}
-
-h3 {
-	font-size: 10pt;
-	color: #000;
-	font-style: italic;
-	page-break-after: avoid;
-}
-
-h4 {
-	font-size: 9pt;
-	color: #000;
-	page-break-after: avoid;
-}
-
-h5 {
-	font-size: 9pt;
-	color: #000;
-	page-break-after: avoid;
-}
-
-h6 {
-	font-size: 9pt;
-	color: #000;
-	page-break-after: avoid;
-}
-
-div.genericHeading {
-	font-size: 9pt;
-	color: #4b6fda;
-	font-weight: bold;
-	page-break-after: avoid;
-}
-
-.head {
-	page-break-after: avoid;
-}
-*/
 
 /* ***** Lists ***** */
 ul.rend-inline {
@@ -1074,31 +594,7 @@ ul.rend-inline {
 ul.rend-none {
 	list-style-type: none;
 }
-/*li.none { list-style-type:none; }*/
 
-
-ul.type-inlineColumn {
-	display: inline;
-	margin-left: 0;
-	padding-left: 0;
-}
-
-/* This should be an inline *vertical* or columnular list.  Need to come up with proper CSS */
-ul.type-inlineColumn li {
-	display: inline;
-	padding-right: .5em;
-	padding-left: .5em;
-	border-right: 1px dotted grey;
-}
-
-ul.type-inlineColumn li.first {
-	padding-left: 0;
-}
-
-ul.type-inlineColumn li.last {
-	padding-right: 0;
-	border-right: none;
-}
 /*ul.simple { display: inline; list-style: none; }*/
 ul.type-simple {
 	display: inline;
@@ -1108,28 +604,7 @@ ul.type-simple {
 	text-indent: .15em;
 }
 
-/* This is for inline lists, especially bibl, that don't need borders, punctuation, etc. */
-ul.type-inlineclean {
-	display: inline;
-	margin-left: 0;
-	padding-left: 0;
-}
 
-/* This should be an inline *vertical* or columnular list.  Need to come up with proper CSS */
-ul.type-inlineclean li {
-	display: inline;
-	padding-right: .5em;
-	padding-left: .5em;
-}
-
-ul.type-inlineclean li.first {
-	padding-left: 0;
-}
-
-ul.type-inlineclean li.last {
-	padding-right: 0;
-	border-right: none;
-}
 /*
 dt {
 	font-weight: bold;
@@ -1149,79 +624,6 @@ dd {
 li {
 	margin-bottom: .25em;
 }
-
-/*
-.glossTerm {
-	display: block;
-	width: 100%;
-	font-weight: bold;
-	color: #870429;
-	padding: 0;
-	margin: 0;
-}
-
-.gloss {
-	display: block;
-	margin-left: 1em;
-	margin-top: 0;
-}
-
-.noteRef {
-	vertical-align: super;
-	font-size: xx-small;
-}
-*/
-/* ***** Tables ***** */
-/*
-td {
-	font-family: inherit;
-	line-height: 1.5;
-}
-
-td.mono {
-	font-family: courier, monospace;
-	font-size: 10pt;
-}
-
-td ul,ol {
-	padding: 0;
-	margin-left: 1.5em;
-}
-
-table.border td {
-	border: 1px solid black;
-}
-
-th {
-	text-align: left;
-}
-
-td.label {
-	width: 15%;
-	font-weight: bold;
-	vertical-align: top;
-}
-
-tr {
-	page-break-after: avoid;
-}
-*/
-
-
-/* Table cell border styles. */
-td.rend-cellBorderRight {
-	border-right: 1px solid black;
-}    
-td.rend-cellBorderBottom {
-	border-bottom: 1px solid black;
-}
-td.rend-cellBorderLeft {
-	border-left: 1px solid black;
-}
-td.rend-cellBorderTop {
-	border-top: 1px solid black;
-}
-
 
 td.number {
 	width: 30px;
@@ -1300,6 +702,6 @@ details.popup div.expansion {
 	padding: 1em;
 	border-style: solid;
 	border-width: thin;
-	border-color: black;
+	border-color: var(--brand-color);
 	border-radius: 0.5em;	
 }
