--- a/static/css/global.css
+++ b/static/css/global.css
@@ -24,6 +24,10 @@
   --page-width: 70rem;
 }
 
+p {
+	margin-top: 0;
+}
+
 /* set page width */
 div#banner,
 nav#main-nav,
@@ -195,9 +199,10 @@ div#banner {
 }
 div#banner h1 {
 	font-family: var(--font-family);
-	font-weight: var(--display-weight);
+	font-weight: var(--regular-weight);
 	font-size: 2rem;
 	padding-left: 2rem;
+	margin: 0;
 }
 
 footer#page-footer {
