hanging indent on long facet labels

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -86,6 +86,8 @@ button.bucket  /* reset so it doesn't look like a button */
 	text-align: left;
 	text-indent: 0;
 	padding: 0;
+	margin-left: 1em;
+	text-indent: -1em;
 	cursor: pointer;
 	color: button;
 }
