--- a/static/css/tei.css
+++ b/static/css/tei.css
@@ -180,6 +180,18 @@ details.tei-note.type-footnote summary,
 details.tei-note.type-annotation summary {
 	font-size: 0.67em;
 	vertical-align: super;
+	padding-right: 0.1em;
+}
+
+details.tei-note[open] summary::after{
+	display: block;
+	content: "❎\FE0E";
+	color: var(--brand-color);
+	margin-top: 1.25em;
+	margin-left: 0.5em;
+	position: absolute;
+	z-index: 1;
+	cursor: auto;
 }
 
 /* pop up footnote and botanical names */
@@ -193,11 +205,13 @@ details.tei-name div
 	font-size: small;
 	font-weight: normal;
 	background-color: white;
-	padding: 1em;
+	padding: 0.75em;
 	border-style: solid;
 	border-width: thin;
 	border-color: black;
 	border-radius: 0.5em;
+	max-width: 50%;
+	margin-right: 1em;
 }
 
 
