--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,6 +1,6 @@
 /* global variables and settings */
 :root {
-  --brand-color: #ee3f75;
+  --brand-color: #DD1353;
   --border-color: rgb(222, 226, 230);
 }
 
