--- a/static/css/tei.css
+++ b/static/css/tei.css
@@ -1,7 +1,7 @@
 
 /* global variables and settings */
 :root {
-  --brand-color: #ee3f75;
+  --brand-color: #DD1353;
   --form-text-font: serif;
 }
 
