--- a/static/css/global.css
+++ b/static/css/global.css
@@ -15,7 +15,7 @@
 */
 /* global variables and settings */
 :root {
-  --brand-color: #ee3f75;
+  --brand-color: #DD1353;
   --background-color: #F7F6F2;
   --font-family: 'Martel Sans', sans-serif;
   --regular-weight: 400;
