make background white

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -16,7 +16,7 @@
 /* global variables and settings */
 :root {
   --brand-color: #DD1353;
-  --background-color: #F7F6F2;
+  --background-color: #ffffff;
   --font-family: 'Martel Sans', sans-serif;
   --regular-weight: 400;
   --bold-weight: 700;
