change brand colour

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -15,7 +15,7 @@
 */
 /* global variables and settings */
 :root {
-  --brand-color: #DD1353;
+  --brand-color: #dd1353;
   --background-color: #ffffff;
   --font-family: 'Martel Sans', sans-serif;
   --regular-weight: 400;
