--- a/static/css/global.css
+++ b/static/css/global.css
@@ -198,7 +198,7 @@ div#banner {
 	display: flex;
 }
 
-div#banner h1, div#banne h2 {
+div#banner h1, div#banner h2 {
 	font-family: var(--font-family);
 	font-weight: var(--regular-weight);
 	padding-left: 2rem;
