--- a/static/css/global.css
+++ b/static/css/global.css
@@ -461,3 +461,18 @@ details.tei-note.type-footnote div.tei-note, details.tei-note.type-annotation di
 .tei-p.rend-Standard {
 	text-indent: 0;
 }
+
+
+.rend-Heading_2, .tei-p.rend-side_head {
+	display: block;
+	font-size: 1.5em;
+	margin-block-start: 0.83em;
+	margin-block-end: 0.83em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+}
+
+.rend-Entry	{
+	text-indent: 0;
+}
