--- a/static/css/global.css
+++ b/static/css/global.css
@@ -473,6 +473,6 @@ details.tei-note.type-footnote div.tei-note, details.tei-note.type-annotation di
 	font-weight: bold;
 }
 
-.rend-Entry, .Blog_Reg	{
+.rend-Entry, .rend-Biog_Reg	{
 	text-indent: 0;
 }
