--- a/static/css/global.css
+++ b/static/css/global.css
@@ -492,3 +492,12 @@ div#home-page {
 	align-items: start;
 	margin: 1rem 0;
 }
+
+/**/
+.last-updated {
+	margin-top: 1rem;
+	margin-bottom: -1.8rem;
+	text-align: right;
+	font-size: 80%;
+	color: #666666;
+}
