--- a/static/css/global.css
+++ b/static/css/global.css
@@ -501,3 +501,7 @@ div#home-page {
 	font-size: 80%;
 	color: #666666;
 }
+
+html[data-filename="data/Apparatus files/Muellers Publications.doc"] .rend-VCMPTitle .tei-note.type-footnote {
+	display: none;
+}
